--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0"
   }
 }
