--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "autoprefixer": "10.4.15",
     "graphql": "^16.8.0",
     "graphql-request": "^6.1.0",
-    "next": "13.4.16",
+    "next": "^13.4.16",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
