--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.2",
     "autoprefixer": "10.4.15",
     "graphql": "^16.8.0",
     "graphql-request": "^6.1.0",
