--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
+    "@nextui-org/react": "^2.2.9",
     "autoprefixer": "10.4.15",
     "fs-extra": "^11.1.1",
     "graphql": "^16.8.0",
