--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
     "@nextui-org/react": "^2.2.9",
+    "@vercel/analytics": "^1.2.1",
     "autoprefixer": "10.4.15",
     "fs-extra": "^11.1.1",
     "graphql": "^16.8.0",
