--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.2",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
     "@nextui-org/react": "^2.2.9",
     "@vercel/analytics": "^1.2.1",
     "autoprefixer": "10.4.15",
